# spreadsheet-validator

./: .gitignore  README.md  hello.py  pyproject.toml
reports/: data_report.html
src/analysis/: eda_report.py
src/backend/: data_validator.py
src/config/: aplicacao_completa.py
src/frontend/: app_validator.py
