[project]
name = "spreadsheet-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "plotly-express>=0.4.1",
    "pydantic>=2.11.3",
    "setuptools>=80.0.0",
    "streamlit>=1.44.1",
    "ydata-profiling>=4.16.1",
]
